--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,10 @@ redundant_pattern = "deny"
 cargo-build = "1.0.0"
 
 [workspace.dependencies]
-sea-orm = { version = "1.1.19", features = [
+sea-orm = { version = "2.0.0-rc.30", features = [
   "runtime-tokio-rustls",
   "sqlx-sqlite",
+  "macros",
 ] }
 anyhow = "1.0.100"
 thiserror = "2.0.18"
