--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vinting-web"]
 	path = vinting-web
-	url = git@github.com:SpawnCycle/vinting-web.git
+	url = https://github.com/SpawnCycle/vinting-web.git
