service trait basics

--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -10,3 +10,7 @@ workspace = true
 sea-orm = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
+
+[dev-dependencies]
+tokio = { version = "1.49.0", features = ["test-util", "macros"] }
+sea-orm = { workspace = true, features = ["mock"] }
