--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,8 @@ sea-orm = { version = "2.0.0-rc.30", features = [
   "runtime-tokio-rustls",
   "sqlx-sqlite",
   "macros",
+  "entity-registry",
+  "schema-sync",
 ] }
 anyhow = "1.0.100"
 thiserror = "2.0.18"
