ci now runs on all workspace members

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           submodules: true
       - name: Build
-        run: cargo build --verbose
+        run: cargo build --verbose --workspace
