--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,4 +16,4 @@ jobs:
         with:
           submodules: true
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test --verbose --workspace
