dtos mostly partially done

--- a/dtos/Cargo.toml
+++ b/dtos/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 serde = { workspace = true }
+sea-orm = { workspace = true }
+entity = { path = "../entity" }
 
 [lints]
 workspace = true
