starting to untangle this

--- a/dtos/Cargo.toml
+++ b/dtos/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 serde = { workspace = true }
 sea-orm = { workspace = true }
+argon2 = { workspace = true }
 entity = { path = "../entity" }
 
 [lints]
