--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ anyhow = "1.0.100"
 thiserror = "2.0.18"
 serde = "1.0.228"
 log = "0.4.29"
+argon2 = "0.5.3"
 
 [dependencies]
 entity = { path = "./entity" }
@@ -45,3 +46,4 @@ serde = { workspace = true }
 anyhow = { workspace = true }
 thiserror = { workspace = true }
 log = { workspace = true }
+argon2 = { workspace = true }
